[gd_scene load_steps=5 format=3 uid="uid://bhxhbrimod6r8"]

[ext_resource type="Script" uid="uid://d2qgm0m7jrpcb" path="res://scripts/url_lookup_tool.gd" id="1_kfh15"]
[ext_resource type="Theme" uid="uid://cvjkotbfb80tq" path="res://assets/UIMainTheme.tres" id="2_kfh15"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jehqg"]
border_width_left = 100
border_width_top = 100
border_width_right = 100
border_width_bottom = 100
border_blend = true

[sub_resource type="Theme" id="Theme_ukskx"]
HBoxContainer/constants/separation = 5
VBoxContainer/styles/Style = SubResource("StyleBoxFlat_jehqg")

[node name="IpLookupTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kfh15")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="SingleLookupPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_ukskx")
theme_override_constants/separation = 60
alignment = 1

[node name="SingleURLLookupBox" type="HBoxContainer" parent="HBoxContainer/SingleLookupPanel"]
layout_mode = 2
size_flags_vertical = 4

[node name="SingleURLText" type="TextEdit" parent="HBoxContainer/SingleLookupPanel/SingleURLLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "google.com"

[node name="SingleURLButton" type="Button" parent="HBoxContainer/SingleLookupPanel/SingleURLLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_kfh15")
text = "Execute Single URL
Lookup"

[node name="DNSLookupBox" type="HBoxContainer" parent="HBoxContainer/SingleLookupPanel"]
layout_mode = 2
size_flags_vertical = 4

[node name="DNSLookupText" type="TextEdit" parent="HBoxContainer/SingleLookupPanel/DNSLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "google.com"

[node name="DNSLookupButton" type="Button" parent="HBoxContainer/SingleLookupPanel/DNSLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_kfh15")
text = "Execute DNS 
Resolution"

[node name="MultiUrlLookup" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/MultiUrlLookup"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "Multi URL Lookup List Here:"
horizontal_alignment = 1

[node name="MultiURLText" type="TextEdit" parent="HBoxContainer/MultiUrlLookup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MultiURLButton" type="Button" parent="HBoxContainer/MultiUrlLookup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = ExtResource("2_kfh15")
text = "Execute"
